  default.
- New command-line option "--input" added to poll for input from a file
  instead of stdin.
- Added WHITELIST_ENEMIES_[IP/USERNAME] to allow players to be enemies, even
  if they come from the same IP address and ALLOW_ENEMIES_SAME_IP is
  disabled (which is its default setting).
- GAME_END, NEW_MATCH, and NEW_ROUND ladderlog events include date and time.

Changes since 0.2.8.3_rc4:
==========================
- New setting: KEEP_PLAYER_SLOT allows the server to kick (preferably) spectators
   if it gets full so there is always one slot open for players
- New setting: ACCESS_LEVEL_AUTOKICK_IMMUNITY sets the access level required 
  to be immune from such kicks (and idle autokicks, too)
- Intercepted chat commands are now written to ladderlog.txt. Format:
  COMMAND /command-intercepted player [command arguments]
- Increased default speed of server pinging
- Reordered game menus a bit
- fast finish works again

Changes since 0.2.8.3_rc3:
==========================
- Pinging previously popular servers earlier for quicker server
  browsing
- Improved master server random polling, the second polled master now
  also is random, and all masters are polled if need be
- Custom camera snaps to cycle direction once when activated if the turn speed
  is zero.
- RESERVE_SCREEN_NAME now works regardless of the ALLOW_IMPOSTOR setting.
- USER_LEVEL now escapes the given authenticated name so you don't have to
  guess the escaping rules. Ex: USER_LEVEL "name with spaces@forums" 2
  changes user level for name\_with\_spaces@forums

Changes since 0.2.8.3_rc2:
==========================
- Fixed crash with server polling
- ROUND_WINNER and MATCH_WINNER ladderlog events now include the players of
  the team.
- Camera switches to user preferred camera when you die in incam mode
- Better support for custom language files
- Players can no longer spam chat with /shuffle messages. Added new setting
  SHUFFLE_SPAM_MESSAGES_PER_ROUND, a per round, per player limit on the number